--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <script src="material.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
