added material.js and material.css

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../src/material.css">
-    <script src="../src/material.js"></script>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/tleunen/react-mdl/master/extra/material.css">
+    <script src="https://raw.githubusercontent.com/tleunen/react-mdl/master/extra/material.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
